feat: implement grid and reboot styles

--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -300,6 +300,7 @@ $theme-colors: (
 
 // Options
 $enable-container-classes:  true !default;
+$enable-grid-classes:       true !default;
 
 // Prefix
 $variable-prefix:             nbs- !default;
